--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <div class="row">
                      <div class="book-box">
                          <img src="./assets/images/orvel.jpg" alt="miser" width="100%" height="100%" >
+                         <div class="overlay">
+                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate laboriosam enim omnis soluta fugit aperiam cupiditate consequuntur earum eaque asperiores ab sapiente quaerat quasi tempora non eum, sint deserunt animi?</p>
+                         </div>
                      </div>
                      <div class="book-box">
                         <img src="./assets/images/headhunters.jpg" alt="miser" width="100%" height="100%" >
